--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 # Whether you use PnP or not, the node_modules folder is often used to store
 # build artifacts that should be gitignored
+*wallet.json
 node_modules
 
 # Swap the comments on the following lines if you wish to use zero-installs
