--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 # Whether you use PnP or not, the node_modules folder is often used to store
 # build artifacts that should be gitignored
 *wallet.json
+*dev-wallet.json
 node_modules
 
 # Swap the comments on the following lines if you wish to use zero-installs
